--- a/spanish-app/package.json
+++ b/spanish-app/package.json
@@ -24,7 +24,8 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.4",
+    "ngx-bootstrap": "^1.9.1",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
