--- a/spanish-app/package.json
+++ b/spanish-app/package.json
@@ -27,6 +27,7 @@
     "ngx-bootstrap": "^1.9.1",
     "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
