--- a/vocab-app/tsconfig.json
+++ b/vocab-app/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
-        "outDir": "./built",
+        "outDir": "./build",
         "allowJs": true,
-        "target": "es6"
+        "target": "es6",
+        "module" : "es6"
     },
+    
     "include": [
         "./src/**/*"
     ]
