--- a/vocab-app/tsconfig.json
+++ b/vocab-app/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./build",
         "allowJs": true,
         "target": "es6",
-        "module" : "es6"
+        "module" : "commonjs"
     },
     
     "include": [
