finish converting to typescript project

--- a/vocab-app/package.json
+++ b/vocab-app/package.json
@@ -7,5 +7,9 @@
   "devDependencies": {
     "@types/node": "^8.0.28",
     "typescript": "^2.5.2"
+  },
+  "scripts": {
+    "build": "tsc",
+    "run_build" : "node build/main.js"
   }
 }
