begin anki export work and covert old vocab to new format

--- a/vocab-app/package.json
+++ b/vocab-app/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "tsc",
     "count" : "node build/main.js count",
-    "deposit" : "node build/main.js deposit"
+    "deposit" : "node build/main.js deposit",
+    "export" : "node build/main.js export"
   }
 }
