--- a/vocab-app/package.json
+++ b/vocab-app/package.json
@@ -6,12 +6,18 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^8.0.28",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "typescript": "^2.5.2"
   },
   "scripts": {
     "build": "tsc",
-    "count" : "node build/main.js count",
-    "deposit" : "node build/main.js deposit",
-    "export" : "node build/main.js export"
+    "count": "node build/main.js count",
+    "deposit": "node build/main.js deposit",
+    "export": "node build/main.js export"
   }
 }
